updated faac to 1.29.2 x64, replaced jlayer decoder with ffmpeg 3.4.1 and other performance improvement resulted increase of speed in 5! times. Tags autofill, progress bar and estimated file size were broken.